# N-body-simulation-in-Rust

rust-n-body/: Cargo.toml
rust-n-body/src/: bhtree.rs  bodies.rs  collision.rs  main.rs  tests.rs
