[package]
name = "rust-n-body"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d"] }
bevy_egui = "0.39.1"
rand = "0.9.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

# Enable a small amount of optimization in the dev profile.`
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
